--- a/webapp/templates/header.html
+++ b/webapp/templates/header.html
@@ -63,7 +63,7 @@
                     </li>
                        
                     <li>
-                        <a type="submit" class="btn btn-danger btn-block mb-4" href="/logout"style="position:relative; left:390px">
+                        <a type="submit" class="btn btn-danger btn-block mb-4" href="/logout"style="position: absolute;right: 20px;">
                             Logout
                           </a>
                     </li>
